Prevent horizontal scrolling on mobile devices

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ html {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
 }
 
 *, *:before, *:after {
@@ -16,6 +15,10 @@ body {
     flex-flow: column;
     margin: 0;
     padding: 0;
+}
+
+div {
+    overflow-x: hidden;
 }
 
 a {
